# alter-rewrite

./: .env-example  README.md  pyproject.toml
src/: constants.py  extractor.py  intents.py  main.py  process_intents.py  wit_helper.py
